added all services

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+# For reactive gateway
+spring.main.web-application-type=reactive
+
 spring.application.name=api-gateway
+server.port=8080
+
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+# Use correct property keys for Spring Cloud Gateway (reactive)
+spring.cloud.gateway.discovery.locator.enabled=true
+spring.cloud.gateway.discovery.locator.lower-case-service-id=true
