--- a/note-service/src/main/resources/application.properties
+++ b/note-service/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+# Server
+server.port=8082
+
 spring.application.name=note-service
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+
+
+# DB (MySQL)
+spring.datasource.url=jdbc:mysql://localhost:3306/userdb
+spring.datasource.username=root
+spring.datasource.password=root
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+jwt.secret= 6P9FzZMl7zZi1YYgsu5vio6yOZ9u6acFQvFAt8b19tA=
