--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,13 +1,16 @@
-# For reactive gateway
-spring.main.web-application-type=reactive
-
 spring.application.name=api-gateway
 server.port=8080
+
+spring.main.web-application-type=reactive
 
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
-# Use correct property keys for Spring Cloud Gateway (reactive)
-spring.cloud.gateway.discovery.locator.enabled=true
-spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+# Fix host issue
+eureka.instance.prefer-ip-address=true
+eureka.instance.hostname=localhost
+
+# Recommended updated keys (no deprecation warnings)
+spring.cloud.gateway.server.webflux.discovery.locator.enabled=true
+spring.cloud.gateway.server.webflux.discovery.locator.lower-case-service-id=true
