--- a/note-service/src/main/resources/application.properties
+++ b/note-service/src/main/resources/application.properties
@@ -4,6 +4,10 @@ server.port=8082
 spring.application.name=note-service
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.instance.prefer-ip-address=true
+eureka.instance.hostname=localhost
 
 # DB (MySQL)
 spring.datasource.url=jdbc:mysql://localhost:3306/userdb
@@ -14,3 +18,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 jwt.secret= 6P9FzZMl7zZi1YYgsu5vio6yOZ9u6acFQvFAt8b19tA=
+
+
