--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -4,6 +4,11 @@ server.port=8081
 spring.application.name=user-service
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+
+eureka.instance.prefer-ip-address=true
+eureka.instance.hostname=localhost
 
 # DB (MySQL)
 spring.datasource.url=jdbc:mysql://localhost:3306/userdb
